feat: release version 2.3.3-2.0.0 with pagination, bug fixes, SQL migration and multilingual documentation