@@ -1,138 +1,129 @@
-# JTrac Build and Compilation Guide (English)
+# JTrac Build & Compilation Guide (English)
 
-This guide provides step-by-step instructions for building, compiling, and packaging the JTrac project, along with an in-depth explanation of Maven dependency management and WAR packaging architecture.
+[English](BUILD_en.md) | [繁體中文](BUILD_zh-TW.md) | [简体中文](BUILD_zh-CN.md) | [日本語](BUILD_ja.md) | [Tiếng Việt](BUILD_vi.md) | [Deutsch](BUILD_de.md) | [Español](BUILD_es.md) | [Français](BUILD_fr.md)
+
+This guide provides comprehensive instructions on building, compiling, and packaging the JTrac 2.3.3-2.0.0 project, along with details on Maven dependency resolution, WAR structure, and modern Web Container deployment (Jetty 10/12, Tomcat 9/10/11).
 
 ---
 
 ## 1. Prerequisites
 
-Before building the project, ensure your environment meets the following requirements:
+Before compiling, verify that your local environment meets the following requirements:
 
 - **Operating System**: Windows / Linux / macOS
-- **Java Development Kit (JDK)**: JDK 8 or JDK 11 (JDK 11 recommended, e.g., `W:\developer\jdk-11.0.25.9-hotspot`)
-- **Apache Maven**: Version 3.9.x or higher (e.g., `W:\developer\apache-maven-3.9.9`)
+- **Java Development Kit (JDK)**: **JDK 11 or JDK 17** (JDK 17 recommended, e.g., `W:\developer\jdk-17.0.9` or JDK 11 `W:\developer\jdk-11.0.28`)
+  > [!IMPORTANT]
+  > JTrac has been modernized to Spring 5.3, Hibernate 5.6, and Wicket 9 with bytecode target Java 11. **JDK 8 is no longer supported**.
+- **Apache Maven**: Maven 3.9.x or later (e.g., `W:\developer\apache-maven-3.9.9`)
 
 ### Windows Environment Setup
-On Windows, load the environment batch script in Command Prompt (CMD) before executing Maven:
-```cmd
-call W:\developer\maven.bat
+In CMD or PowerShell, set your environment variables:
+```powershell
+$env:JAVA_HOME = "W:\developer\jdk-17.0.9"
+$env:PATH = "W:\developer\apache-maven-3.9.9\bin;$env:PATH"
 ```
-This script configures `PATH` and `JAVA_HOME` for the current terminal session.
 
-Verify your environment:
-```cmd
+Verify setup:
+```bash
 mvn -version
 ```
-The output should confirm the active Maven and Java versions.
 
 ---
 
 ## 2. Common Build Commands
 
-Run the following commands from the JTrac project root directory (where `pom.xml` resides):
+Run the following commands from the root repository directory containing `pom.xml`:
 
 | Command | Description |
 |---|---|
-| `mvn compile` | Compiles 137 Java source files under `src/main/java` and processes resources |
-| `mvn test-compile` | Compiles all unit test classes under `src/test/java` |
-| `mvn test` | Runs unit tests (uses built-in in-memory HSQLDB; no external DB required) |
-| `mvn package` | Runs tests and packages the full web application into `target/jtrac.war` |
-| `mvn package -DskipTests` | Quickly builds and packages `target/jtrac.war`, skipping unit tests |
-| `mvn clean` | Cleans up the `target/` directory and build artifacts |
-| `mvn clean compile` | Cleans previous artifacts and re-compiles the entire codebase |
+| `mvn clean compile` | Clean previous caches and compile `src/main/java` with resource filtering |
+| `mvn test-compile` | Compile unit test classes in `src/test/java` |
+| `mvn test` | Run all unit tests (JUnit 5 + embedded HSQLDB, no external DB required) |
+| `mvn package` | Run tests and package into production WAR (`target/jtrac.war`) |
+| `mvn package -DskipTests` | Fast packaging without running unit tests |
+| `mvn clean` | Clean all build artifacts in `target/` |
 
 ---
 
-## 3. Automatic Dependency Management via Maven (`~/.m2/repository`)
+## 3. Maven Dependency Caching (`~/.m2/repository`)
 
-JTrac is configured with standard Maven dependency management. All required third-party libraries (including Spring Framework, Apache Wicket, Hibernate, Acegi Security, Lucene, etc.) are formally declared in [`pom.xml`](../../pom.xml).
+All third-party libraries (Spring 5.3, Wicket 9, Hibernate 5.6, Spring Security 5.8) are declared in [`pom.xml`](../../pom.xml).
 
-### Automatic Download & Cache Workflow:
-1. When you first run `mvn compile` or `mvn package`, Maven connects to the remote repository (Maven Central).
-2. All declared dependencies and transitive dependencies are automatically downloaded to your local user cache:
-   - **Windows**: `%USERPROFILE%\.m2\repository\` (e.g., `C:\Users\username\.m2\repository\`)
-   - **Linux / macOS**: `~/.m2/repository/`
-3. Subsequent builds read directly from your local `.m2` repository cache. **You never need to manually search, download, or configure third-party JARs.**
+1. On initial build, Maven downloads all artifacts from Maven Central.
+2. Artifacts are cached locally at `%USERPROFILE%\.m2\repository\` (Windows) or `~/.m2/repository/` (Linux/macOS).
+3. Subsequent builds reuse the local cache completely offline.
 
 ---
 
-## 4. Third-Party Library Bundling in WAR (`WEB-INF/lib/`)
+## 4. WAR Package Structure (`WEB-INF/lib/`)
 
-A common question among developers is: "When deploying JTrac to a servlet container like Jetty or Tomcat, do I need to manually copy third-party JARs into the server's `lib/` directory?"
-
-**Answer: Absolutely NOT!**
-
-### WAR Package Architecture:
-When you run `mvn package`, Maven automatically constructs a self-contained Web Application Archive: [`target/jtrac.war`](../../target/jtrac.war). Its internal structure includes:
+Running `mvn package` produces the production-ready archive [`target/jtrac.war`](../../target/jtrac.war):
 
 ```text
 jtrac.war
 ├── META-INF/
 │   └── MANIFEST.MF
 ├── WEB-INF/
-│   ├── classes/                 <-- JTrac compiled classes and UTF-8 resource files
+│   ├── classes/                 <-- Compiled classes and UTF-8 properties
 │   │   ├── info/jtrac/...
 │   │   └── messages*.properties
-│   ├── lib/                     <-- [ALL 53 third-party JARs are bundled here!]
-│   │   ├── spring-2.5.6.jar
-│   │   ├── wicket-1.3.7.jar
-│   │   ├── hibernate-3.2.7.ga.jar
-│   │   ├── stringtree.jar       <-- Bundled proprietary library
+│   ├── lib/                     <-- All modern third-party libraries
+│   │   ├── spring-core-5.3.37.jar
+│   │   ├── wicket-core-9.16.0.jar
+│   │   ├── hibernate-core-5.6.15.Final.jar
+│   │   ├── spring-security-core-5.8.14.jar
 │   │   ├── hsqldb-2.7.2.jar
-│   │   └── ... (all remaining dependency JARs)
-│   └── web.xml                  <-- Servlet 3.1 configuration
+│   │   └── ...
+│   └── web.xml                  <-- Servlet 4.0 configuration
 └── resources/
 ```
 
-### Deployment Key Points:
-- **Classloader Isolation**: Servlet containers (e.g., Jetty 9.4, Jetty 12 `ee8`, Tomcat 9) automatically read and isolate libraries from `WEB-INF/lib/` for each deployed web application.
-- **Clean Server Directory**: The server's own `lib/` folder must remain clean; **do not copy application JARs into the container's library folder**.
-- **Effortless Deployment**: Simply place `target/jtrac.war` (or rename it to `ROOT.war`) inside the server's `webapps/` folder, and start the container.
+- Servlet containers isolate `WEB-INF/lib/` automatically per webapp.
+- The host container `lib/` directory must remain untouched.
 
 ---
 
-## 5. Local Testing & Execution
+## 5. Web Container Matrix & Deployment
 
-After packaging, to run JTrac locally for interactive testing:
+JTrac 2.3.3-2.0.0 uses Servlet 4.0 specifications (`javax.servlet`) and is compatible with modern web containers:
 
-### Using Jetty:
-1. Copy `target/jtrac.war` to `W:\developer\jtrac-2.3.3\webapps\ROOT.war`.
-2. Run `W:\developer\jtrac-2.3.3\start.bat`.
-3. Open your browser and navigate to: `http://localhost:8888` (Default administrator credentials: `admin` / `admin`).
+| Container | Supported Version | Deployment Method |
+|---|---|---|
+| **Jetty 10.x** | 10.0.x (Recommended) | **Out-of-the-box**: Copy `target/jtrac.war` to `webapps/ROOT.war`. |
+| **Jetty 12.x** | 12.0.x (Latest) | **Native**: Enable the `ee8` module:<br/>`java -jar start.jar --add-modules=server,http,ee8-deploy,ee8-webapp`. |
+| **Tomcat 9.x** | 9.0.x (Recommended) | **Out-of-the-box**: Copy `target/jtrac.war` to `webapps/ROOT.war`. |
+| **Tomcat 10.x / 11.x** | 10.1.x / 11.0.x | **Auto-migration**: Place `jtrac.war` into `webapps-javaee/`, or convert using `jakartaee-migration`. |
+
+### Local Jetty 10 Example:
+1. Copy `target/jtrac.war` to `W:\developer\jetty-10.0.26\webapps\ROOT.war`.
+2. Start Jetty:
+   ```powershell
+   & "W:\developer\jdk-17.0.9\bin\java.exe" -jar W:\developer\jetty-10.0.26\start.jar
+   ```
+3. Open browser: `http://localhost:8888` (default: `admin` / `admin`).
 
 ---
 
-## 6. Building & Running Standalone CLI HTML Exporter (jtrac-exporter)
+## 6. Database Migration (Upgrading from 2.3.3-1.0.0)
 
-The project includes a standalone CLI tool `jtrac-exporter` (with zero legacy framework dependencies) that exports JTrac database records directly into static, responsive HTML discussion threads with attachments via standard JDBC.
+- **External Databases (MySQL, PostgreSQL, SQL Server, Oracle)**: Run [`etc/sql/upgrade-to-2.0.0.sql`](../../etc/sql/upgrade-to-2.0.0.sql) to add pagination parameters.
+- **Embedded HSQLDB**: `HsqldbDatabaseMigrator` automatically backs up and upgrades HSQLDB 1.8 to 2.x on server startup with zero manual configuration.
 
-### 6.1 Build the Tool (Fat JAR)
-Run this command from the project root directory (no need to switch directories):
+---
+
+## 7. Standalone CLI Exporter (`jtrac-exporter`)
+
+### 7.1 Build Fat JAR
 ```cmd
 mvn clean package -f tools/jtrac-exporter/pom.xml -DskipTests
 ```
-Upon successful build, the executable JAR is generated directly at:
-`tools/jtrac-exporter.jar`
+Output: `tools/jtrac-exporter.jar`.
 
-### 6.2 Execute Export (Command Mode)
-From the project root, export from local embedded HSQLDB using relative paths:
+### 7.2 Run Export
 ```cmd
 java -jar tools/jtrac-exporter.jar ^
   --db-url="jdbc:hsqldb:file:./data/db/jtrac;shutdown=true;readonly=true" ^
   --attachments-dir="./data/attachments" ^
-  --out="./export-hsqldb" ^
+  --out="./export-output" ^
   --lang=en
 ```
-
-You can also connect to remote MySQL, PostgreSQL, or SQL Server databases:
-```cmd
-java -jar tools/jtrac-exporter.jar ^
-  --db-url="jdbc:mysql://192.168.1.100:3306/jtrac?useUnicode=true&characterEncoding=UTF-8" ^
-  --db-user="jtrac" ^
-  --db-password="your_password" ^
-  --attachments-dir="/path/to/attachments" ^
-  --out="./export-mysql" ^
-  --lang=en
-```
-To view all available CLI options, run: `java -jar tools/jtrac-exporter.jar --help`.
-
